--- a/Sites/test_app/Gemfile
+++ b/Sites/test_app/Gemfile
@@ -7,6 +7,9 @@ gem 'bcrypt-ruby'
 # Bundle edge Rails instead:
 # gem 'rails', :git => 'git://github.com/rails/rails.git'
 gem 'sqlite3'
+gem 'faker'
+gem 'will_paginate'
+gem 'bootstrap-will_paginate'
 
 
 
